@@ -139,6 +139,10 @@ Release 1.4.0 (2010-08-??)
 - The POCO_VERSION macro now is in its own header file, "Poco/Version.h". It is no longer
   available through "Poco/Foundation.h".
 - added Poco::Net::HTTPCookie::escape() and Poco::Net::HTTPCookie::unescape().
+- fixed SF# 3021173: Thread (POSIX) returns uninitialised value for OS priority
+- fixed SF# 3040870: ThreadPool has no function to get assigned name
+- fixed SF# 3044303: Can't use own config file on Solaris & OSARCH_64BITS ignored
+- fixed SF# 2943896: AsyncChannel::log blocks
 
 
 Release 1.3.6p2 (2010-01-15)
@@ -1320,4 +1324,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#117 $
+$Id: //poco/1.3/dist/CHANGELOG#118 $
